# Bookmarks

./: cert.crt  cert.key  pyproject.toml
account/: forms.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: base.html
account/templates/account/: dashboard.html  login.html  register.html  register_done.html
account/templates/registration/: login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
bookmarks/: settings.py  urls.py
images/: forms.py  models.py  views.py
images/migrations/: 0001_initial.py
