[project]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuel A. Martinez-Delgado",email = "manuelmrtzd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2.9)",
    "pillow (>=12.0.0,<13.0.0)",
    "social-auth-app-django (>=5.7.0,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "werkzeug (>=3.1.4,<4.0.0)",
    "pyopenssl (>=25.3.0,<26.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[tool.poetry]
packages = [{include = "bookmarks", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
